fix: center align profile image preview by adding margin for improved layout

--- a/src/index.css
+++ b/src/index.css
@@ -818,6 +818,7 @@ a:hover {
 .profile-image-preview {
   display: flex;
   justify-self: flex-end;
+  margin: auto;
   align-items: center;
   cursor: pointer;
   height: 6em;
